--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,205 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Regular */
+@font-face {
+  font-family: "HackNerdFont";
+  src: url("../assets/fonts/HackNerdFont-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Bold */
+@font-face {
+  font-family: "HackNerdFont";
+  src: url("../assets/fonts/HackNerdFont-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* Italic */
+@font-face {
+  font-family: "HackNerdFont";
+  src: url("../assets/fonts/HackNerdFont-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+/* Bold Italic */
+@font-face {
+  font-family: "HackNerdFont";
+  src: url("../assets/fonts/HackNerdFont-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* Mono */
+
+/* Regular */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Bold */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* Italic */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+/* Bold Italic */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* Propo */
+
+/* Regular */
+@font-face {
+  font-family: "HackNerdFontPropo";
+  src: url("../assets/fonts/HackNerdFontPropo-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Bold */
+@font-face {
+  font-family: "HackNerdFontPropo";
+  src: url("../assets/fonts/HackNerdFontPropo-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* Italic */
+@font-face {
+  font-family: "HackNerdFontPropo";
+  src: url("../assets/fonts/HackNerdFontPropo-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+/* Bold Italic */
+@font-face {
+  font-family: "HackNerdFontPropo";
+  src: url("../assets/fonts/HackNerdFontPropo-BoldItalic.ttf")
+    format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+/* Mono */
+
+/* Regular */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Bold */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* Italic */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+/* Bold Italic */
+@font-face {
+  font-family: "HackNerdFontMono";
+  src: url("../assets/fonts/HackNerdFontMono-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+
+
+
+/* NeueMontreal Font Face Declarations */
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-LightItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url("../assets/fonts/NeueMontreal-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+}
+
+/* You can add more variations as needed */
+
+body {
+  font-family: "HackNerdFont", sans-serif;
+}
